# engravedetect-final

./: .cursor-rules  .dockerignore  .flake8  .gitignore  API_DOCUMENTATION.md  Dockerfile  Dockerfile.api_ia  README.md  clean_code.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  scrapy.cfg  setup.py  test_grafana.py
.github/workflows/: cd.yml  ci.yml
data/datasets/: split_dataset.py  triplet_dataset.py
docs/: C10_Integration_API_IA.md  C1_Automatisation_Extraction_Donnees.md  C2_Requetes_SQL_Extraction_Donnees.md  C3_Agregation_Donnees.md  C4_Base_Donnees_RGPD.md  C5_API_REST.md  C9_API_IA.md
models/: evaluate_model.py  train.py
models/losses/: triplet_losses.py
monitoring/grafana/: fastapi_monitoring.json
monitoring/prometheus/: prometheus.yml
recherche_tags/: staging_azure.csv  staging_azure_filtered.csv  staging_azure_with_tags.csv  staging_sqlite.csv  staging_sqlite_filtered.csv  sync_tags.py
scripts/: run_spiders.py
src/: __init__.py
src/api/: README.md  main.py  models.py
src/api/core/: config.py  security.py
src/api/models/: __init__.py  references.py  verres.py
src/api/schemas/: auth.py  verres.py
src/api/services/: __init__.py  auth.py  verres.py
src/api_ia/: __init__.py  main.py  requirements.txt
src/api_ia/app/: __init__.py  config.py  database.py  main.py  model_loader.py  openapi_config.py  security.py  similarity_search.py
src/api_ia/core/: __init__.py  config.py  openapi_config.py  security.py
src/api_ia/models/: __init__.py
src/api_ia/monitoring/: metrics_collector.py
src/api_ia/routes/: auth.py  prediction.py
src/api_ia/schemas/: requests.py  responses.py
src/api_ia/services/: __init__.py  model_service.py  similarity_service.py
src/data/export/: csv_export.py  (+1 more)
src/database/: README.md  migrate_to_verres.py  reset_database.py  reset_verres.py
src/datasets/: split_dataset.py  triplet_dataset.py
src/models/: efficientnet_triplet.py  evaluate_model.py  train.py
src/orchestrator/: pipeline_manager.py
src/scripts/: evaluate.py  extract_tags.py  insert_tags.py  preprocess.py  train.py
src/utils/: test_connection.py
tests/: conftest.py  test_api.py
tests/test_routes/: test_verres_routes.py
tests/test_schemas/: test_verres_schemas.py
tests/test_services/: test_verres_service.py  test_verres_services.py
(+35 files in other folders)
