[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engravedetect"
version = "0.1.0"
description = "EngraveDetect - Détection de gravures"
requires-python = ">=3.8"
authors = [
    {name = "Antoine Moulard", email = "antoine.moulard@hotmail.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pillow",
    "numpy",
    "torch",
    "torchvision"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}

# Recherche automatique de tous les packages Python valides dans /src
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 127
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=engravedetect"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
